create hairhaus loyalty clients & loyalty apikey
