# models/user.go
@@ -12,6 +12,7 @@ const (
 type User struct {
 	BaseModel
 	EmployeeID  string `gorm:"uniqueIndex;not null" json:"employee_id"` // HAIRHAUS Loyalty ID, manually input
+	OutletID    string `gorm:"not null" json:"outlet_id"`               // HAIRHAUS Loyalty Outlet ID
 	Name        string `gorm:"not null" json:"name"`
 	PhoneNumber string `gorm:"uniqueIndex;not null" json:"phone_number"`
 	Pin         string `gorm:"not null" json:"-"` // hashed PIN
